--- a/SpringBootProj/src/main/resources/templates/InquiryResult.html
+++ b/SpringBootProj/src/main/resources/templates/InquiryResult.html
@@ -7,6 +7,9 @@
 <body>
 	<div th:object="${dataForm}">
 		入力を受け付けました。
+		
+		<div th:text="'受付日時:'+ *{recdt}"><br></div>
+		<div th:text="'受付番号:'+ *{recno}"><br></div>
 		<div th:text="'お名前:'+ *{name}"><br></div>
 		<div th:text="'メール:'+ *{mail}"><br></div>
 		<div th:text="'ご年齢:'+ *{age}"><br></div>
